Inserita variazione sui Tastoni per Affitto SI NO in caso di immobili non residenziali e corretta visualizzazione sulla scheda immobile su presenza o meno dell'affitto

--- a/src/app/pages/scheda-immobile/scheda-immobile.page.html
+++ b/src/app/pages/scheda-immobile/scheda-immobile.page.html
@@ -74,13 +74,16 @@
                                 </ul>
                             </div>
                             <div class="item">
-                                <h3 class="item-title">Affitti
-                                    <span>{{immobile.affitto_dettaglio ? immobile.affitto_dettaglio.importo_mensile + ' €' : '-'}}</span>
+                                <h3 class="item-title">Affitto
+                                    <span>{{immobile.affitto_dettaglio ? immobile.affitto_dettaglio.importo_mensile + ' €' : ''}}</span>
                                 </h3>
-                                <ul class="item-list half-height">
+                                <ul class="item-list half-height" *ngIf="immobile.affitto_dettaglio">
                                     <li><span>Affittuario</span><span>{{immobile.affitto_dettaglio ? immobile.affitto_dettaglio.descrizione_affittuario : '-'}}</span>
                                     </li>
                                 </ul>
+                                <div *ngIf="!immobile.affitto_dettaglio">
+                                    <span>Non affittato</span>
+                                </div>
                             </div>
                         </div>
                     </div>
