--- a/src/global.scss
+++ b/src/global.scss
@@ -1252,6 +1252,11 @@ input:checked + .slider:before {
                     background-position: center;
                     background-image: url('/assets/img/icon-agricolo-big@2x.png') ;
                 }
+                &.terreno {
+                    background-repeat: no-repeat;
+                    background-position: center;
+                    background-image: url('/assets/img/icon-terreno-big@2x.png') ;
+                }
                 &.ufficio {
                     background-repeat: no-repeat;
                     background-position: center;
