Aggiunga Icona Terreno

--- a/src/global.scss
+++ b/src/global.scss
@@ -1881,6 +1881,11 @@ input:checked + .slider:before {
                 background-position: center;
                 background-image: url('/assets/img/icon-agricolo@2x.png') ;
             }
+            .terreno {
+                background-repeat: no-repeat;
+                background-position: center;
+                background-image: url('/assets/img/icon-terreno@2x.png') ;
+            }
             .ufficio {
                 background-repeat: no-repeat;
                 background-position: center;
