--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -60,7 +60,7 @@
                             <div class="cliente-row">
                                 <div class="item immobili"><span class="badge">{{clienteLista.numero_proprieta}}</span>
                                 </div>
-                                <div class="item bv"><span class="bv_value">{{clienteLista.book_value}}</span><span
+                                <div class="item bv"><span class="bv_value">{{getCurrency(clienteLista.book_value)}}</span><span
                                         class="bv_label">Book Value (&euro;)</span></div>
                                 <div class="item anagrafica"><span class="nome">{{clienteLista.nome}}
                                         {{clienteLista.cognome}}</span><span
