--- a/src/app/pages/scheda-immobile/scheda-immobile.page.html
+++ b/src/app/pages/scheda-immobile/scheda-immobile.page.html
@@ -38,12 +38,12 @@
                                         class="button view only-icon"
                                         (click)="openModal('custom-modal-1')">&nbsp;</button></h3>
                                 <ul class="item-list half-height">
-                                    <li><span>Book Value</span><span class="right-span">{{immobile.valore_acquisto}}
+                                    <li><span>Book Value</span><span class="right-span">{{getCurrency(immobile.valore_acquisto)}}
                                             €</span></li>
-                                    <li><span>Valore catastale</span><span>{{immobile.valore_catastale}} €</span></li>
-                                    <li><span>Valore commerciale</span><span>{{immobile.valore_commerciale}} €</span>
+                                    <li><span>Valore catastale</span><span>{{getCurrency(immobile.valore_catastale)}} €</span></li>
+                                    <li><span>Valore commerciale</span><span>{{getCurrency(immobile.valore_commerciale)}} €</span>
                                     </li>
-                                    <li><span>Rendita</span><span>{{immobile.dati_catastali ? immobile.dati_catastali.rendita : '-'}}</span>
+                                    <li><span>Rendita</span><span>{{immobile.dati_catastali ? getCurrency(immobile.dati_catastali.rendita) : '-'}} €</span>
                                     </li>
                                     <li><span>1ª casa</span><span>{{immobile.prima_casa ? 'Si' : 'No'}}</span></li>
                                 </ul>
@@ -67,15 +67,15 @@
                         </div>
                         <div class="scheda-row">
                             <div class="item">
-                                <h3 class="item-title">Tasse <span>{{getTotaleTasse(immobile)}} €</span></h3>
+                                <h3 class="item-title">Tasse <span>{{getCurrency(getTotaleTasse(immobile))}} €</span></h3>
                                 <ul class="item-list half-height">
                                     <li *ngFor="let t of immobile.tasse">
-                                        <span>{{t.descrizione_tassa}}</span><span>{{t.importo_annuale}} €</span></li>
+                                        <span>{{t.descrizione_tassa}}</span><span>{{getCurrency(t.importo_annuale)}} €</span></li>
                                 </ul>
                             </div>
                             <div class="item">
                                 <h3 class="item-title">Affitto
-                                    <span>{{immobile.affitto_dettaglio ? immobile.affitto_dettaglio.importo_mensile + ' €' : ''}}</span>
+                                    <span>{{immobile.affitto_dettaglio ? getCurrency(immobile.affitto_dettaglio.importo_mensile) + ' €' : ''}}</span>
                                 </h3>
                                 <ul class="item-list half-height" *ngIf="immobile.affitto_dettaglio">
                                     <li><span>Affittuario</span><span>{{immobile.affitto_dettaglio ? immobile.affitto_dettaglio.descrizione_affittuario : '-'}}</span>
