Cambiata Label e Dinamicizzate quelle nel nuovo cliente

--- a/src/app/pages/nuovo-cliente/nuovo-cliente.page.html
+++ b/src/app/pages/nuovo-cliente/nuovo-cliente.page.html
@@ -5,7 +5,7 @@
                 <div class="tool-row">
                     <div class="tool">
                         <button (click)="goToHome()" class="button back only-icon">&nbsp;</button>
-                        <h3 class="page-title no-icon">Nuovo cliente</h3>
+                        <h3 class="page-title no-icon">{{titolo_pagina}}</h3>
 
                     </div>
                 </div>
@@ -19,7 +19,7 @@
                         <div class="scheda-row">
                             <div class="item tipologia cliente"></div>
                             <div class="item indirizzo">
-                                Invia la richiesta per ricevere i dati catastali
+                                {{sotto_titolo_pagina}}
                             </div>
                         </div>
                     </div>
