--- a/src/app/pages/scheda-immobile/scheda-immobile.page.html
+++ b/src/app/pages/scheda-immobile/scheda-immobile.page.html
@@ -38,7 +38,7 @@
                                         class="button view only-icon"
                                         (click)="openModal('custom-modal-1')">&nbsp;</button></h3>
                                 <ul class="item-list half-height">
-                                    <li><span>Book Value</span><span class="right-span">{{getCurrency(immobile.valore_acquisto)}}
+                                    <li><span>Valore acquisto</span><span class="right-span">{{getCurrency(immobile.valore_acquisto)}}
                                             €</span></li>
                                     <li><span>Valore catastale</span><span>{{getCurrency(immobile.valore_catastale)}} €</span></li>
                                     <li><span>Valore commerciale</span><span>{{getCurrency(immobile.valore_commerciale)}} €</span>
